[project]
name = "leetpath"
version = "0.1.0"
description = "AI-powered NeetCode 150 progress tracker with pattern-based weakness detection and daily problem recommendations"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "jinja2>=3.1.0",
    "uvicorn[standard]>=0.32.0",
]
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/leetpath"]

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
    "ruff>=0.15.13",
]
[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort (import ordering)
    "B",   # bugbear (common bugs)
    "UP",  # pyupgrade (modern Python syntax)
    "N",   # naming conventions
    "RUF", # Ruff-specific rules
]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
